Bug 303003 - koreport: page sizes are not internationalized
Summary: koreport: page sizes are not internationalized
Status: RESOLVED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-04 09:35 UTC by Dag Andersen
Modified: 2012-09-01 09:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2012-07-04 09:35:21 UTC
Additionally the list is not fetched from KoPageFormat, so the full list is not available.

Reproducible: Always
Comment 1 Dag Andersen 2012-08-13 13:37:53 UTC
Git commit 35b474e3148452b2a2bdba9a29a41e0843a8541a by Dag Andersen.
Committed on 13/08/2012 at 08:55.
Pushed by danders into branch 'master'.

Localize page size in koreport and use sensible method names in KoPageFormat
REVIEW: 105469

M  +4    -9    libs/koreport/wrtembed/KoReportDesigner.cpp
M  +0    -6    libs/koreport/wrtembed/KoReportDesigner.h
M  +2    -2    libs/odf/KoPageFormat.cpp
M  +2    -2    libs/odf/KoPageFormat.h
M  +1    -1    libs/widgets/KoPageLayoutWidget.cpp

http://commits.kde.org/calligra/35b474e3148452b2a2bdba9a29a41e0843a8541a
Comment 2 Jarosław Staniek 2012-09-01 09:21:22 UTC
Git commit dd9628a63f10db1874fdf181620e73a81faa012d by Jaroslaw Staniek, on behalf of Dag Andersen.
Committed on 13/08/2012 at 08:55.
Pushed by staniek into branch 'kexi-features-staniek'.

Localize page size in koreport and use sensible method names in KoPageFormat
REVIEW: 105469

M  +4    -9    libs/koreport/wrtembed/KoReportDesigner.cpp
M  +0    -6    libs/koreport/wrtembed/KoReportDesigner.h
M  +2    -2    libs/odf/KoPageFormat.cpp
M  +2    -2    libs/odf/KoPageFormat.h
M  +1    -1    libs/widgets/KoPageLayoutWidget.cpp

http://commits.kde.org/calligra/dd9628a63f10db1874fdf181620e73a81faa012d