Localize page size in koreport and use sensible method names in KoPageFormat

BUG: 303003
REVIEW: 105469